# reachlock

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SIZE_BUDGET  rust-toolchain.toml
.claude/rules/: reachlock-cli.md  reachlock-client.md  reachlock-core.md  reachlock-server.md
.githooks/: pre-commit
.github/workflows/: check.yml  ci.yml  release.yml
archive/v1/: .gutconfig.json  GAME-DESIGN.md  ci.yml  setup.sh
content/combat/: raider_boss.ron
content/factions/: canon.ron
content/hulls/: corvette_frame.ron  freighter_frame.ron  loup_garou.ron  room_templates.ron  shuttle_frame.ron
content/schemas/: contract.schema.json  faction.schema.json  hostile.schema.json  hull.schema.json  hull_frame.schema.json  room_template.schema.json  soul.schema.json  station.schema.json
content/souls/: boris.ron  doss.ron
content/stations/: sorrow_station.ron
content/storylines/: compact_arc.ron
content/systems/: cadence.ron  earth.ron  fringe_a.ron  fringe_b.ron  verne.ron
docs/: ARCHITECTURE.md  EDITOR-HANDOFF.md  LORE.md  MEMORY-INTERFACE.md  PENDING-FEATURE-PRS.md  REACHLOCK-V2-SPEC.md  SHIPS.md  SPRINT-02-the-living-slice.md  SYSTEM-INTEGRATION.md  UNIVERSE-TICK.md
docs/demos/: M12-second-playthrough.md  M13-the-open-hatch.md
docs/sprints/: 00-INDEX.md  HANDOFF-2026-07-15.md  S01-content-pipeline.md  S02-client-networking.md  S03-server-persistence-auth.md  S04-system-generator.md  S05-item-generator.md  S06-mode-state-machine.md  S07-landed-slice.md  S08-onboard-slice.md  S09-flight-jump-cryo.md  S10-economy-engine.md  S11-faction-engine.md  S12-universe-tick.md  S13-soul-system.md  S14-llm-providers.md  S15-agency-failure-model.md  S16-dialogue-deliberation-ux.md  S16B-wave4-closeout.md  S17-ship-editor-exterior.md  S18-ship-editor-interior.md  S19-space-combat.md  S20-landed-combat.md  S21-gate-network-frontier.md  S22-modding-framework.md  S23-mmo-presence.md  S24-web-distribution.md  S25-content-editor-suite.md  S26-server-operations.md  S27-llm-cost-quota.md  S28-payments-subscriptions.md  S29-voice-chat.md  S30-agent-tooling.md  S31-game-settings.md  (+17 more)
godot/: project.godot
reachlock-cli/: Cargo.toml
reachlock-cli/src/: agent_check.rs  codex.rs  content.rs  determinism.rs  gen.rs  main.rs  mod_cmd.rs
reachlock-cli/tests/: content_schema_validation.rs
reachlock-client/: Cargo.toml
reachlock-client/src/: bridge.rs  main.rs  pixel.rs  save_backend.rs  settings.rs  states.rs
reachlock-client/src/net/: mod.rs  mode.rs  outbox.rs  transport.rs
reachlock-client/src/systems/: career.rs  combat.rs  comms.rs  content_index.rs  contract.rs  contract_crafting.rs  contract_library.rs  crew.rs  crisis.rs  cryojump.rs  culture_view.rs  dialogue.rs  discovery.rs  docking.rs  factions.rs  galaxy_map.rs  hud.rs  interaction.rs  interior.rs  inventory.rs  jump.rs  landed_combat.rs  market.rs  menu.rs  mod.rs  mode.rs  music.rs  network.rs  onboard.rs  pause.rs  presence.rs  reticle.rs  sensors.rs  settings_ui.rs  setup.rs  ship.rs  shipeditor.rs  soul.rs  starfield.rs  story_submission.rs  (+2 more)
reachlock-client/src/systems/shipeditor/: exterior.rs  interior.rs  mod.rs
reachlock-client/src/systems/voice/: mod.rs  voice_native.rs  voice_wasm.rs
reachlock-client/tests/: network_integration.rs
reachlock-core/: Cargo.toml
reachlock-core/src/: agency.rs  crisis.rs  determinism.rs  dialogue.rs  economy.rs  faction.rs  generator.rs  lib.rs  mod_manifest.rs  sim.rs
reachlock-core/src/agency/: log.rs  log_generation.rs  mod.rs
reachlock-core/src/career/: mod.rs  piracy.rs
reachlock-core/src/combat/: behavior.rs  damage.rs  encounter.rs  humanoid.rs  location.rs  melee.rs  mod.rs
reachlock-core/src/content/: envelope.rs  mod.rs  priority.rs  resolve.rs  seed.rs  validate.rs
reachlock-core/src/contract/: co_deliberation.rs  engine.rs  meta_game.rs  metadata.rs  mod.rs  protocol.rs  signature.rs  theater.rs  types.rs  validation.rs
reachlock-core/src/editor/: exterior.rs  interior.rs  mod.rs
reachlock-core/src/galaxy/: coord.rs  gate.rs  mod.rs
reachlock-core/src/generator/: contract.rs  culture.rs  dilemma.rs  economy.rs  ecosystem.rs  ecosystem_events.rs  enemy.rs  faction.rs  hull.rs  location.rs  mission.rs  mod.rs  music.rs  planet.rs  planet_extended.rs  scripted_encounter.rs  ship.rs  soul.rs  sprite.rs  station.rs  storyline.rs  system.rs  transit.rs  trope.rs  ui.rs
reachlock-core/src/item/: mod.rs  names.rs  room_upgrade.rs  stats.rs  types.rs
reachlock-core/src/network/: messages.rs  mod.rs
reachlock-core/src/seed/: mod.rs  resolver.rs  types.rs
reachlock-core/src/soul/: compression.rs  memory.rs  mod.rs  runtime.rs  types.rs
reachlock-core/src/universe/: mod.rs  rules.rs  tier.rs
reachlock-core/src/util/: color.rs  mod.rs  noise.rs  rng.rs  trig.rs
reachlock-core/tests/: s20_content_parses.rs
reachlock-editor/: Cargo.toml
reachlock-editor/src/: ai.rs  app.rs  browser.rs  dialogs.rs  help_window.rs  io.rs  main.rs  preferences_window.rs  preview.rs  schema.rs  seed_workflow.rs  settings_window.rs
reachlock-editor/src/editors/: character_sprite.rs  charted_system.rs  contract.rs  dialogue.rs  economy.rs  enemy.rs  faction.rs  gate_network.rs  hull.rs  hull_frame.rs  hull_mesh.rs  item.rs  item_browser.rs  location.rs  mod.rs  room_templates.rs  soul.rs  station.rs  storyline.rs  widgets.rs
reachlock-server/: Cargo.toml
reachlock-server/migrations/: 0001_init.sql
reachlock-server/src/: config.rs  lib.rs  main.rs  observability.rs
reachlock-server/src/services/: audit.rs  auth.rs  billing.rs  byok.rs  content.rs  contracts.rs  cost.rs  degradation.rs  eval.rs  health.rs  library.rs  limiter.rs  llm_proxy.rs  metrics.rs  mod.rs  providers.rs  quota.rs  seed.rs  tick.rs  verify.rs  voice.rs
reachlock-server/src/ws/: admin.rs  handler.rs  mod.rs  session.rs
reachlock-server/tests/: content_distribution.rs  llm_providers.rs  ws_roundtrip.rs
save/: player.ron
scripts/: check_architecture.py  check_weave_contract.py  dev_stack.sh  gen_pixel_art.py  trigger_dsl.py  validate_mod_data.py
web/: index.html
(+669 files in other folders)
