[workspace]
resolver = "2"
members = [
    "reachlock-core",
    "reachlock-client",
    "reachlock-cli",
    "reachlock-server",
    "reachlock-editor",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/chezgoulet/reachlock"

[workspace.dependencies]
# SPIKE FINDING (2026-07-10): the spec names Bevy 0.19, but bevy_rapier2d 0.34
# (newest) targets bevy 0.18.1. The newest fully-coherent stack is
# bevy 0.18 + rapier 0.34 + lyon 0.16. Upgrade to 0.19 when rapier 0.35 ships.
bevy = "0.18.1"
# S09b: SpaceFlight is 3D (spec §14 Mode 3, Star Fox 64 6-DOF). rapier 0.34
# targets bevy 0.18. Interiors use no physics, so rapier3d is the only physics
# context; the former bevy_rapier2d dependency was dropped in S09b.
bevy_rapier3d = "0.34"
bevy_prototype_lyon = "0.16"

# Dev-profile opt for dependencies keeps incremental client builds tolerable
# while Bevy itself is compiled with optimizations. debug = false because a
# Bevy debug-info target dir runs to many GB; flip locally when you actually
# need a debugger.
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev]
opt-level = 1
debug = false

# S24: release build profile for distribution (web + native).
# opt-level = "z" favors size over speed for smaller WASM downloads.
# rapier physics is excluded from "z" because it has historically produced
# pathological compile times with size optimization (S24 brief gotcha).
[profile.release]
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1
debug = false

[profile.release.package.rapier3d]
opt-level = 3

[profile.release.package.rapier2d]
opt-level = 3
