[package]
name = "reachlock-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "reachlock"
path = "src/main.rs"

[dependencies]
reachlock-core = { path = "../reachlock-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
