[package]
name = "reachlock-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "reachlock"
path = "src/main.rs"

[dependencies]
reachlock-core = { path = "../reachlock-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
# Authoring format for `content …` (matches reachlock-core's `ron` dep).
ron = "0.12"
# JSON Schema validation for content files (spec §01, stage 2).
jsonschema = "0.47"
