[package]
name = "reachlock-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# No rendering dependencies, ever. The core produces plain data; the client's
# bridge layer converts it to Bevy assets. (Spec §3, §5.)
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
