[package]
name = "reachlock-editor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reachlock-core = { path = "../reachlock-core" }
eframe = "0.31"
egui = "0.31"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.21"
