[package]
name = "reachlock-editor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reachlock-core = { path = "../reachlock-core" }
eframe = "0.31"
egui = "0.31"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Native save/open dialogs (Save As, File > Open). The editor is a
# native-only tool — the workspace WASM gate builds only the client.
rfd = "0.15"
