[package]
name = "reachlock-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Postgres-backed stores. Off by default so the server builds and runs
# (in-memory) with zero infrastructure; CI checks this feature compiles.
postgres = ["dep:sqlx"]

[dependencies]
reachlock-core = { path = "../reachlock-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"], optional = true }

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
