[package]
name = "reachlock-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Postgres-backed stores. Off by default so the server builds and runs
# (in-memory) with zero infrastructure; CI checks this feature compiles.
postgres = ["dep:sqlx"]

[dependencies]
reachlock-core = { path = "../reachlock-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# S14: real LLM providers. rustls (not openssl) keeps builds portable.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# S14: BYOK keys encrypted at rest (real crypto, not base64).
chacha20poly1305 = "0.10"
# S29: TURN REST API credential generation (HMAC-SHA1 — coturn-compatible).
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"], optional = true }
# S26: TraceId generation (UUIDv7) and Prometheus metrics.
uuid = { version = "1", features = ["v7"] }
prometheus = { version = "0.13", features = [] }
sha256 = "1"
# S28: HMAC-SHA256 for offline entitlement tokens + Stripe webhook verification.
sha2 = "0.10"
hex = "0.4"
# S28: DateTime types for subscription periods.
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
